spade-tests/src/snapshots/spade_tests__ast_lowering__implicit_visibility_works.snap
---
source: spade-tests/src/ast_lowering.rs
---
mod a {
    mod secret {}
}

mod b {
    use super::a::secret; // this will fail
}


error: secret is inaccessible
  ┌─ testinput:6:19
  │
2 │     mod secret {}
  │         ------ The inaccessible item is defined here
  ·
6 │     use super::a::secret; // this will fail
  │                   ^^^^^^ secret is inaccessible
  │
  = note: consider using `pub` to alter its visibility
